apps/base/wireguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - name: wireguard
          image: lscr.io/linuxserver/wireguard:1.0.20250521
          ports:
            - containerPort: 51820
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wireguard-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      sysctls:
        - name: net.ipv4.conf.all.src_valid_mark
          value: "1"
